fixed overflowing post buttons

--- a/styling.css
+++ b/styling.css
@@ -361,8 +361,17 @@ input {
 
 
 .post_content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     border-radius: 25px;
     background-color: teal;
+    font-size: 2rem;
     margin: 1rem;
     padding: 1rem;
+}
+
+.post_link {
+
 }
